--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme._31008527SpringCoursework"
         tools:targetApi="31">
         <activity
+            android:name=".timetable.TimetableMain"
+            android:exported="false" />
+        <activity
+            android:name=".AppHomePage"
+            android:exported="false" />
+        <activity
             android:name=".WelcomeActivity"
             android:exported="false" />
         <activity
