--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme._31008527SpringCoursework"
         tools:targetApi="31">
         <activity
-            android:name=".timetable.TimetableMain"
+            android:name=".taskbarFragments.TimetableMain"
             android:exported="false" />
         <activity
             android:name=".AppHomePage"
