--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme._31008527SpringCoursework"
         tools:targetApi="31">
         <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".AppHomePage"
             android:exported="false" />
         <activity
@@ -24,7 +27,7 @@
             android:name=".RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashScreenUoe"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
